--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_titre"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="110dp"
+        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,8 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/main_txt_j1"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="@dimen/main_margin_txt"
+        android:layout_marginTop="@dimen/main_margin_top_txt"
+        android:layout_marginHorizontal="@dimen/main_margin_horizontal_txt"
         app:layout_constraintTop_toBottomOf="@id/main_txt_titre" >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -40,8 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/main_txt_j2"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="@dimen/main_margin_txt"
+        android:layout_marginTop="@dimen/main_margin_top_txt"
+        android:layout_marginHorizontal="@dimen/main_margin_horizontal_txt"
         app:layout_constraintTop_toBottomOf="@id/main_saisie_nom_j1">
 
         <com.google.android.material.textfield.TextInputEditText
