--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="main_margin_horizontal_txt">50dp</dimen>
     <dimen name="main_margin_top_txt">30dp</dimen>
+    <dimen name="quiz"></dimen>
 </resources>
