--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SpeedQuiz" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SpeedQuiz" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/vert_moyen</item>
+        <item name="colorPrimaryVariant">@color/vert_fonce</item>
+        <item name="colorOnPrimary">@color/blanc</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/turquoise_clair</item>
+        <item name="colorSecondaryVariant">@color/turquoise_fonce</item>
+        <item name="colorOnSecondary">@color/noir</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/vert_clair</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
