Changement des id sur les Edit Text dans l'xml

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -21,7 +21,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/start_saisie_nom_j1"
+        android:id="@+id/start_layout_nom_j1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/start_nom_j1"
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/start_txt_titre" >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/start_et_nom_j1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -38,15 +39,16 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/start_saisie_nom_j2"
+        android:id="@+id/start_layout_nom_j2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/start_nom_j2"
         android:layout_marginTop="@dimen/start_margin_top_txt"
         android:layout_marginHorizontal="@dimen/start_margin_horizontal_txt"
-        app:layout_constraintTop_toBottomOf="@id/start_saisie_nom_j1">
+        app:layout_constraintTop_toBottomOf="@id/start_layout_nom_j1">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/start_et_nom_j2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -58,8 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/start_margin_top_txt"
-        app:layout_constraintTop_toBottomOf="@+id/start_saisie_nom_j2"
-        app:layout_constraintEnd_toEndOf="@+id/start_saisie_nom_j2">
+        app:layout_constraintTop_toBottomOf="@+id/start_layout_nom_j2"
+        app:layout_constraintEnd_toEndOf="@+id/start_layout_nom_j2">
 
     <Button
         android:id="@+id/start_bt_jouer"
