--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -56,20 +56,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/start_margin_top_txt"
-        app:layout_constraintTop_toBottomOf="@+id/start_layout_nom_j2"
-        app:layout_constraintEnd_toEndOf="@+id/start_layout_nom_j2">
 
     <Button
         android:id="@+id/start_bt_jouer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start_bt_jouer"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/start_margin_top_txt"
+        app:layout_constraintTop_toBottomOf="@id/start_layout_nom_j2"
+        app:layout_constraintEnd_toEndOf="@id/start_layout_nom_j2"
         />
 
     <Button
@@ -79,10 +74,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/start_bt_sep"
         android:text="@string/start_bt_annuler"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/start_bt_jouer"
         app:layout_constraintEnd_toStartOf="@+id/start_bt_jouer"
         />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
