Ajout des styles pour les champs de texte de la premirère page

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="start.txt.nomJoueur" parent="Widget.Material3.TextInputEditText.OutlinedBox">
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">text</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="start.layout.txt.nomJoueur" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+        <item name="android:layout_marginTop">@dimen/start_margin_top_txt</item>
+        <item name="android:layout_marginStart">@dimen/start_margin_horizontal_txt</item>
+        <item name="android:layout_marginEnd">@dimen/start_margin_horizontal_txt</item>
+    </style>
+
     <style name="quiz.txt.score" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
