--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -21,37 +21,31 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/start.layout.txt.nomJoueur"
         android:id="@+id/start_layout_nom_j1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/start_nom_j1"
-        android:layout_marginTop="@dimen/start_margin_top_txt"
-        android:layout_marginHorizontal="@dimen/start_margin_horizontal_txt"
         app:layout_constraintTop_toBottomOf="@id/start_txt_titre" >
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/start.txt.nomJoueur"
             android:id="@+id/start_et_nom_j1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/start.layout.txt.nomJoueur"
         android:id="@+id/start_layout_nom_j2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/start_nom_j2"
-        android:layout_marginTop="@dimen/start_margin_top_txt"
-        android:layout_marginHorizontal="@dimen/start_margin_horizontal_txt"
         app:layout_constraintTop_toBottomOf="@id/start_layout_nom_j1">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/start.txt.nomJoueur"
             android:id="@+id/start_et_nom_j2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
