Fin de la première interface de la page de configuration

--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -1,24 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConfigActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/config_txt_titre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
+            android:text="@string/config_title"
+            android:textSize="32sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/main_toolbar"
+        <TextView
+            style="@style/config_txt_titre"
+            android:id="@+id/config_txt_titre_delais"
+            android:layout_marginTop="50dp"
+            android:text="@string/config_titre_delais"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/config_txt_titre" />
+
+        <!-- Continuous slider -->
+        <com.google.android.material.slider.Slider
+            android:id="@+id/config_slide_delais"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/app_margin"
+            android:layout_marginTop="@dimen/config_space_titre"
+            android:valueFrom="0.5"
+            android:stepSize="0.5"
+            android:valueTo="5"
+            app:layout_constraintTop_toBottomOf="@id/config_txt_titre_delais"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/config_txt_delais"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/app_margin"
+            android:layout_marginTop="14dp"
+            android:text="@string/config_delais"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/config_txt_titre_delais" />
+
+        <Button
+            style="@style/config_bt_valider"
+            android:id="@+id/config_bt_delais_valider"
+            android:text="@string/config_bt_valider_delais"
+            app:layout_constraintTop_toBottomOf="@id/config_slide_delais"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            style="@style/config_txt_titre"
+            android:id="@+id/config_txt_titre_qst_perso"
+            android:layout_marginTop="50dp"
+            android:text="@string/config_titre_qst"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/config_bt_delais_valider" />
+
+        <TextView
+            style="@style/config_txt_titre_h2"
+            android:id="@+id/config_txt_titre_qst_int"
+            android:text="@string/config_titre_qst_int"
+            android:layout_marginTop="@dimen/config_space_titre"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/config_txt_titre_qst_perso" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/config_layout_question_perso"
+
+            android:layout_marginHorizontal="@dimen/app_margin"
+            android:layout_marginTop="@dimen/config_space_titre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="4dp">
-        </com.google.android.material.appbar.MaterialToolbar>
+            android:hint="@string/config_qst_perso"
+            app:layout_constraintTop_toBottomOf="@id/config_txt_titre_qst_int" >
 
-    </com.google.android.material.appbar.AppBarLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            style="@style/config_txt_titre_h2"
+            android:id="@+id/config_txt_titre_qst_rep"
+            android:text="@string/config_titre_qst_rep"
+            android:layout_marginTop="@dimen/config_space_titre"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/config_layout_question_perso" />
+
+        <RadioGroup
+            android:id="@+id/config_rdGrp_rep"
+            android:checkedButton="@+id/config_rdBt_vrai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/config_txt_titre_qst_rep"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+                <RadioButton
+                    android:id="@+id/config_rdBt_vrai"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/config_rep_qst_vrai"
+                    />
+                <RadioButton
+                    android:id="@+id/config_rdBt_faux"
+                    android:layout_marginStart="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/config_rep_qst_faux"
+                    />
+        </RadioGroup>
+
+        <Button
+            style="@style/config_bt_valider"
+            android:id="@+id/config_bt_qst_valider"
+            android:text="@string/config_bt_valider_delais"
+            app:layout_constraintTop_toBottomOf="@id/config_rdGrp_rep"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
