--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -42,4 +42,26 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="config_txt_titre" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="config_txt_titre_h2" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="config_bt_valider" parent="Widget.Material3.Button.TonalButton">
+        <item name="backgroundTint">@color/vert_tres_clair</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
+        <item name="android:layout_marginEnd">@dimen/app_margin</item>
+    </style>
 </resources>
