--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="vert_fonce">#0A3C06</color>
     <color name="vert_moyen">#FF105C0A</color>
     <color name="vert_clair">#54AA56</color>
+    <color name="vert_tres_clair">#CAD6CB</color>
     <color name="turquoise_clair">#218E83</color>
     <color name="turquoise_fonce">#114343</color>
     <color name="noir">#FF000000</color>
