--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -26,11 +26,8 @@
 
     <TextView
         android:id="@+id/start_txt_titre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/app_txt_h1"
         android:text="@string/start_titre"
-        android:layout_marginTop="110dp"
-        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
