--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".QuestionActivity">
 
+    <TextView
+        android:id="@+id/qst_txt_titre"
+        style="@style/app_txt_h1"
+        android:text="@string/qst_titre"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/qst_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/config_space_titre"
+        app:layout_constraintTop_toBottomOf="@id/qst_txt_titre"
         app:layout_constraintStart_toStartOf="parent">
     </ListView>
 
